--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/desespero?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/desespero?createDatabaseIfNotExist=true&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=Innovation@2021
@@ -23,3 +23,8 @@ info.app.description=@project.description@
 info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
+
+#Keycloak
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri= ${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/spring-realm}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/spring-realm/protocol/openid-connect/certs}
