--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,8 @@ info.app.java.version=@java.version@
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri= ${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/spring-realm}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/spring-realm/protocol/openid-connect/certs}
+
+management.endpoints.web.exposure.include=info,health,metrics,prometheus
+management.endpoints.prometheus.enabled=true
+
+
