--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
@@ -84,7 +95,7 @@
 				<scope>import</scope>
 			</dependency>
 
-	
+
 
 		</dependencies>
 	</dependencyManagement>
