versao final desafio proposta

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,13 @@
-spring.datasource.url=${PROPOSTA_DATABASE_URL}
-spring.datasource.username=${PROPOSTA_DATABASE_USERNAME}
-spring.datasource.password=${PROPOSTA_DATABASE_PASSWORD}
+spirng.datasource.platform=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=keycloak
+spring.datasource.password=password
+
+# jpa
+spring.jpa.database=POSTGRESQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 
