--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,23 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/desespero?createDatabaseIfNotExist=true&serverTimezone=UTC
+server.port=6666
 
-spring.datasource.username=root
-spring.datasource.password=Innovation@2021
+#spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/proposta?createDatabaseIfNotExist=true
+
+spring.datasource.username=keycloak
+spring.datasource.password=password
 
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.hibernate-plataform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # actuator
@@ -28,8 +33,12 @@ info.app.java.version=@java.version@
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri= ${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/spring-realm}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/spring-realm/protocol/openid-connect/certs}
-
 management.endpoints.web.exposure.include=info,health,metrics,prometheus
 management.endpoints.prometheus.enabled=true
+
+
+opentracing.jaeger.log-spans=false
+opentracing.jaeger.service-name=proposta
+opentracing.jaeger.http-sender.url=http://localhost:6831
 
 
